hw2-comment change

--- a/files/hw2/hw2.ipynb
+++ b/files/hw2/hw2.ipynb
@@ -2261,8 +2261,10 @@
    "source": [
     "### Comments:\n",
     "- Gestures 1 and 6 and 4 and 5 are not successfully seperated from each other.\n",
-    "- Gestures 2,7 and 8 are seperated from other classes more successfully.\n",
-    "- Although there are some overlaps between different gesture classes, considering seperately they are clustered successfully and this can be used for classification. "
+    "- Gestures 2 and 7 are seperated from other classes more successfully.\n",
+    "- Gestures 3 and 4 look like spreaded over some places, they are not clustered successfully.\n",
+    "- Most instances of gesture 7 are clustered in the down-left corner and seperated from other classes but it has also some instances mixed with other classes.\n",
+    "- Although there are some overlaps between different gesture classes, considering seperately this clustering can be used for classification."
    ]
   }
  ],
