--- a/files/hw3/hw3.ipynb
+++ b/files/hw3/hw3.ipynb
@@ -3766,6 +3766,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
